fixed search input styling and spacing on hourly forecast when there is a rain percentage chance

--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ body {
   max-width: 320px;
   margin: 20px auto;
   border-radius: 10px;
-  box-shadow: var(--box-shadow);
+  /* box-shadow: var(--box-shadow); */
   /* background-color: var(--container-background); */
 }
 
