--- a/src/components/hourly-item/hour-item.css
+++ b/src/components/hourly-item/hour-item.css
@@ -2,7 +2,7 @@
   margin: 0 8px 0 8px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  min-height: 110px;
 }
 
 .formatted-time {
@@ -11,6 +11,7 @@
 
 .rain-percent {
   font-size: 12px;
+  min-height: 17px;
 }
 
 .hour-item img {
